--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 
 <body>
+<div class="profile">
+    <img src="assets/profile.jpg" alt="Gianluigi Riccardi" class="profile-photo">
+    <h1>Gianluigi Riccardi</h1>
+    <p>Technical Operations Lead – Predictive Maintenance Engineer</p>
+</div>
 
 <header>
     <div class="header-content">
